# ppr-project

./: .gitignore  CMakeLists.txt
docs/: README.MD  ppr_presentation.pptx
src/: CMakeLists.txt  main  main.cpp
